personas/service.yml
apiVersion: v1
kind: Service
metadata:
  name: personas-svc
  labels:
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: personas
