personas/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: personas-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: tesis.com
      http:
        paths:
          - path:
            backend:
              serviceName: personas-svc
              servicePort: 8080
